Closed Bug 1026404 Opened 10 years ago Closed 8 years ago

crash in libsrv_um.so@0xa820

Categories

(Firefox for Android Graveyard :: Toolbar, defect)

All
Android
defect
Not set
critical

Tracking

(firefox30 affected, firefox31 affected, firefox32 affected, firefox33 affected, firefox34 affected, firefox35 affected, firefox36 affected, firefox50 fixed, firefox51 fixed, firefox52 fixed)

RESOLVED FIXED
Firefox 52
Tracking Status
firefox30 --- affected
firefox31 --- affected
firefox32 --- affected
firefox33 --- affected
firefox34 --- affected
firefox35 --- affected
firefox36 --- affected
firefox50 --- fixed
firefox51 --- fixed
firefox52 --- fixed

People

(Reporter: cos_flaviu, Unassigned)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is 
report bp-1f460e09-235c-4511-951f-8f9062140617.
=============================================================
Environment: 
Device: Lenovo Yoga Tab 10 (Android 4.4.2);
Build: Nightly 33.0a1 (2014-06-16);

Steps to reproduce:
1. Launch Fennec;
2. Go to youtube.com

Expected result:
The page is successfully loaded.

Actual result:
Firefox crashes.
I found this exception in logcat when Firefox has crashed:

W/InputMethodManagerService(663): Got RemoteException sending setActive(false) notification to pid 3077 uid 10103
W/Binder(858): Caught a RuntimeException from the binder stub implementation.
W/Binder(858): java.lang.NullPointerException
W/Binder(858): 	at android.inputmethodservice.IInputMethodWrapper.setSessionEnabled(IInputMethodWrapper.java:280)
W/Binder(858): 	at com.android.internal.view.IInputMethod$Stub.onTransact(IInputMethod.java:129)
W/Binder(858): 	at android.os.Binder.execTransact(Binder.java:404)
W/Binder(858): 	at dalvik.system.NativeStart.run(Native Method)
W/System.err(858): java.lang.NullPointerException
W/System.err(858): 	at android.inputmethodservice.IInputMethodWrapper.setSessionEnabled(IInputMethodWrapper.java:280)
W/System.err(858): 	at com.android.internal.view.IInputMethod$Stub.onTransact(IInputMethod.java:129)
W/System.err(858): 	at android.os.Binder.execTransact(Binder.java:404)
W/System.err(858): 	at dalvik.system.NativeStart.run(Native Method)
Anything simple here, or would a device be required?
Flags: needinfo?(nchen)
Looks like a graphics crash. The stack looks okay but I think a device would be needed.
Component: General → Graphics, Panning and Zooming
Flags: needinfo?(nchen)
Ordered a device (RITM0047770) for the London office.
This is an 100% reproducible crash on SGX544MP KitKat devices by opening youtube. The driver crashes in EGLImageTargetTexture2D(), called from EGLImageTextureSource::BindTexture().

This is similar to bug 1264505, except we crash whether target is GL_TEXTURE_2D or GL_TEXTURE_EXTERNAL. This crash is preventable by disabling the extensions OES_EGL_image AND OES_EGL_image_external on this GPU.
Keywords: regression
Actually, while the crash signature linked to in the report only has Kit Kat devices, it is possible Lollipop and onwards also don't support these extensions, but crash with a different signature. Unfortunately the Lenovo Yoga 10 we have in london never got a lollipop upgrade so I cannot confirm
Looking through SGX 544 crashes I cannot see one which looks like the same root cause but with a different signature, so it's safe to apply this workaround only on Kit Kat and below.

https://treeherder.mozilla.org/#/jobs?repo=try&author=jnicol@mozilla.com&selectedJob=29943872
Comment on attachment 8804790 [details]
Bug 1026404 - Disable OES_EGL_image and OES_EGL_image_external on SGX 544 MP devices.

https://reviewboard.mozilla.org/r/88676/#review88048
Attachment #8804790 - Flags: review+
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1ba26e18f7ca
Disable OES_EGL_image and OES_EGL_image_external on SGX 544 MP devices. r=eflores
Keywords: checkin-needed
Comment on attachment 8804790 [details]
Bug 1026404 - Disable OES_EGL_image and OES_EGL_image_external on SGX 544 MP devices.

I realise we are late in the cycle but this is a fairly common crash and is safe.

Approval Request Comment
[Feature/regressing bug #]: Bug 956993 (2.5 years ago)
[User impact if declined]: Guaranteed crash on youtube and other sites, on SGX 544MP devices
[Describe test coverage new/current, TreeHerder]: Try run above. This makes us use existing and tested fallback path, nothing new.
[Risks and why]: Very low - makes us use fallback path instead, and only on devices which definitely would have crashed otherwise
[String/UUID change made/needed]: N/A
Attachment #8804790 - Flags: approval-mozilla-beta?
Attachment #8804790 - Flags: approval-mozilla-aurora?
Comment on attachment 8804790 [details]
Bug 1026404 - Disable OES_EGL_image and OES_EGL_image_external on SGX 544 MP devices.

Fixes a crash that seems medium volume on 49.0.2 and could be a problem when 50 goes to release, taking it. Aurora51+, Beta50+
Attachment #8804790 - Flags: approval-mozilla-beta?
Attachment #8804790 - Flags: approval-mozilla-beta+
Attachment #8804790 - Flags: approval-mozilla-aurora?
Attachment #8804790 - Flags: approval-mozilla-aurora+
https://hg.mozilla.org/mozilla-central/rev/1ba26e18f7ca
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 52
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: