Bug 1026404 - Disable OES_EGL_image and OES_EGL_image_external on SGX 544 MP devices. r=eflores

EGLImageTargetTexture2D crashes on SGX 544 MP GPUs on Kit Kat with
either GL_TEXTURE_2D or GL_TEXTURE_EXTERNAL as the texture target. This
means that both OES_EGL_image and OES_EGL_image_external extensions do
not work and must be avoided.

MozReview-Commit-ID: DJmtUL6kexC