gfx/gl/GLContext.h
@@ -180,6 +180,7 @@ enum class GLRenderer {
     Mali450MP,
     SGX530,
     SGX540,
+    SGX544MP,
     Tegra,
     AndroidEmulator,
     GalliumLlvmpipe,
